# ctapi-cyberjack

./: ChangeLog  ChangeLog.old  HOWTO.debian  Makefile.am  Makefile.in  NEWS  README.txt  aclocal.m4  config.h.in  configure  configure.ac  ctapi-cyberjack.spec  ctapi-cyberjack.spec.in
checksuite/: Makefile.am  Makefile.in  checkmodule.cpp  checkmodule.h  checksuite.cpp  checksuite.h  cm_distri.cpp  cm_distri.h  cm_driver.cpp  cm_driver.h  cm_group.cpp  cm_group.h  cm_reader.cpp  cm_reader.h  cm_services.cpp  cm_services.h  cm_uname.cpp  cm_uname.h
cjeca32/: BaseCommunication.cpp  BaseCommunication.h  BaseReader.cpp  BaseReader.h  BaseTranslater.cpp  BaseTranslater.h  CCIDReader.cpp  CCIDReader.h  Debug.cpp  EC30Reader.cpp  EC30Reader.h  ECBReader.cpp  ECBReader.h  ECFReader.cpp  ECFReader.h  ECMReader.cpp  ECMReader.h  ECPReader.cpp  ECPReader.h  ECRReader.cpp  ECRReader.h  EFBReader.cpp  EFBReader.h  Makefile.am  Makefile.in  PCSC10.h  Platform_unix.cpp  RSCTCriticalSection.cpp  RSCTCriticalSection.h  Reader.cpp  SECReader.cpp  SECReader.h  SerialUnix.cpp  USBUnix.cpp  USBUnix.h  ccid.h  cjeca32.cpp  config.cpp  config_l.h  ntstatus.h  (+2 more)
cjeca32/ausb/: Makefile.am  Makefile.in  ausb.c  ausb_libusb0.c  ausb_libusb1.c  ausb_libusb1_l.h  usbdev_libusb1.c
ctapi/: Makefile.am  Makefile.in  ctapi.cpp  ctapi_beep.cpp  ctapi_beep.h  ctapi_special.cpp  libtest.c
debian/: Makefile.am  Makefile.in  changelog  control  control-tmpl.in  copyright  docs  libctapi-cyberjack2.dirs  libctapi-cyberjack2.doc-base  libctapi-cyberjack2.postinst  libctapi-cyberjack2.postrm  rules  rules-tmpl.in
debian/patches/: FTBFS-gcc-4.7.patch
doc/: LIESMICH.html  LIESMICH.ps  LIESMICH.txt  LIESMICH.xml  Makefile.am  Makefile.in  README.html  README.ps  README.txt  README.xml  cjflash.8  cjgeldkarte.8  cyberjack.8  verifypin_ascii.c  verifypin_fpin2.c
ecom/: Makefile.am  Makefile.in  cj.h  cjctapi.c  cjctapi.h  cjio.c  cjio.h  cjio_user.c  cjio_user.h  cjt1.c  cjt1.h  ctapi-ecom.h
etc/: Makefile.am  Makefile.in  cyberjack.conf.default
etc/hal/: 80-cyberjack.fdi  Makefile.am  Makefile.in
etc/hotplug/: Makefile.am  Makefile.in  cyberjack.usermap  usbcyberjack
etc/resmgr/: 99-cyberjack.conf  Makefile.am  Makefile.in
etc/udev/: Makefile.am  Makefile.in  rules.fc5  rules.new  udev.cyberjack.sh
ifd/: Info.plist.in  Makefile.am  Makefile.in  ifdhandler.c  part10.c  part10_l.h
include/: BingoError.h  Debug.h  Makefile.am  Makefile.in  Platform.h  Platform_unix.h  Platform_win32.h  Reader.h  cjeca32.h  eca_defines.h  eca_module_errors.h  memory_placements.h
include/macosx/: Makefile.am  Makefile.in
include/macosx/PCSC/: Makefile.in  reader.h  winscard.h  wintypes.h
libcyberjack/: Makefile.am  Makefile.in  driver.cpp  driver.hpp  driver_ctapi.cpp  driver_ctapi.hpp  driver_pcsc.cpp  driver_pcsc.hpp  driver_pcsc_p.hpp  libtest.cpp  module.cpp  module.hpp  modulestore.cpp  modulestore.hpp  mtemplate.cpp  mtemplate.hpp
libdialog/: Makefile.am  Makefile.in  dialog.c  dialog.h  dialog_p.h  libtest.cpp
libdialog/base/: Makefile.am  Makefile.in  message.c  message.h  network.c  network.h
m4/: Makefile.am  Makefile.in  README  fox.m4  libusb.m4  libxml2.m4  os.m4  pcsc.m4  searchfiles.m4  windoze.m4
ppa/: Makefile.am  Makefile.in  SyncInterpreter.c  ccid.h  cjccid.c  cjdata.c  cjpp.h  cjppDebugOutLinux.c  cjppPlatformLinux.c  cjppUpdate.c  cjppa.h  cjppa_linux.h  easy_dat.c
tools/: Makefile.am  Makefile.in
tools/cjBingo/: Makefile.am  Makefile.in  cjBingo.cpp  cjBingoTest.cpp
tools/cjflash/: Makefile.am  Makefile.in  cjflash.cpp
tools/cjgeldkarte/: Makefile.am  Makefile.in  cjgeldkarte.c
tools/cyberjack/: Makefile.am  Makefile.in  cyberjack.cpp  mt-test.cpp
tools/cyberjack/scripts/: Makefile.am  Makefile.in  getdist.sh
tools/fox-dialog/: Makefile.am  Makefile.in  dlg.cpp  dlg.hpp  main.cpp
tools/fxcyberjack/: Makefile.am  Makefile.in  fxcy_app.cpp  fxcy_app.hpp  fxcy_mainwindow.cpp  fxcy_mainwindow.hpp  fxcy_readerdetails.cpp  fxcy_readerdetails.hpp  fxcy_readerflash.cpp  fxcy_readerflash.hpp  fxcy_readerflash2.cpp  fxcy_readerflash2.hpp  fxcy_readerkeys.cpp  fxcy_readerkeys.hpp  fxcy_readerlist.cpp  fxcy_readerlist.hpp  fxcy_readerview.cpp  fxcy_readerview.hpp  main.cpp
tools/fxcyberjack/diag/: Makefile.am  Makefile.in  checkthread.cpp  checkthread.h  checkwidget.cpp  checkwidget.h  foxchecksuite.cpp  foxchecksuite.h  fxcy_diag.cpp  fxcy_diag.h  msgqueue.cpp  msgqueue.h
tools/fxcyberjack/icons/: Makefile.am  Makefile.in  icons.cpp
tools/mac-ui-helper/: Delegate.h  Delegate.m  Makefile.am  Makefile.in  PinDialog.h  PinDialog.m  de.reiner-sct.cyberjack.gui.plist  main.m
