INCLUDES=-I../../../include -I../../../ctapi -I../../../libcyberjack \
 -I../../../checksuite $(fox_includes)

DEFS+=@cyberjack_platform_def@

noinst_LTLIBRARIES=libfxdiag.la

libfxdiag_la_SOURCES=\
  checkthread.cpp \
  checkwidget.cpp \
  foxchecksuite.cpp \
  fxcy_diag.cpp \
  msgqueue.cpp

noinst_HEADERS=\
  checkthread.h \
  checkwidget.h \
  foxchecksuite.h \
  fxcy_diag.h \
  msgqueue.h


